# Agents-Notify

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-build.txt  requirements-desktop.txt
.github/workflows/: build-desktop.yml
agent_watch_notify/: __main__.py  _config.py  _offset.py  config.html  config_server.py  desktop.py  events.py  installer.py  instance_lock.py  notifier.py  resources.py  watcher.py
docs/: requirements-multi-agent.md
packaging/: macos_setup.py
scripts/: bootstrap.ps1  bootstrap.sh  build_macos.sh  build_windows.ps1  com.codex.watch-notify.plist.in  install.sh  messages.codex.json  messages.json  messages.zcode.json  render_plist.py
src/: codex_watch_notify.py
tests/: test_codex_watch_notify.py  test_desktop.py  test_install.py
