[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-watch-notify"
version = "1.0.0"
description = "Push AI Agent task notifications to your smartwatch via ntfy"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
agent-watch-notify = "agent_watch_notify.__main__:main"

[tool.setuptools.packages.find]
include = ["agent_watch_notify*"]

[tool.setuptools.package-data]
agent_watch_notify = ["*.html"]
